--- a/public/dom.html
+++ b/public/dom.html
@@ -19,6 +19,11 @@
         <img src="" id="googleImg" class="" />
     </div>
 
+
+
+    <div id="test">Hi</div>
+    <div class="testclass">Hello</div>
+
     <div data-username="Kiru" id="attrUsername">Hello Its username data Attributes</div>
     <div data-lastname="Kiru" id="attrlastname">Hello Its lastname data Attributes</div>
 
