--- a/public/forms.html
+++ b/public/forms.html
@@ -51,6 +51,7 @@
     <script type=" text/javascript" src="public/assets/scripts/utilities.js"></script>
     <script type=" text/javascript" src="public/assets/scripts/scripts.js"></script>
     <script type="text/javascript">
+        //document.querySelector('[name=proof]:checked').value;
         window.onload = function() {
             JSTraining.demo.userSignUpForm.initialize();
         }
