--- a/public/functions.html
+++ b/public/functions.html
@@ -36,7 +36,7 @@
         myFunc(5, 10);
 
         //Function Hoisting
-        //funcHoisting(); This is Expression sho it should be called after Expression
+        //funcHoisting(); This is Expression so it should be called after Expression
         var funcHoisting = function() {
             console.log("Hey  you are calling function Hoisting");
         }
