--- a/public/hoisting_1.html
+++ b/public/hoisting_1.html
@@ -13,7 +13,9 @@
 
         console.log("Your firstName: " + firstName);
         //var firstName;
-        firstName = "kirubakar";
+        var firstName = "kirubakar";
+
+        console.log("Your firstName after declaration: " + firstName);
     </script>
 </body>
 
