--- a/public/operators.html
+++ b/public/operators.html
@@ -14,6 +14,10 @@
 
         //Add the (Arithmatic Numbers) and Strings
         console.log(x + y + " Total Strings");
+
+        console.log(x + " Total Strings" + 5);
+        console.log("5" + y + " Total Strings");
+        console.log(5 + '5' + " Total Strings");
     </script>
 </head>
 
